# cifra-spotify

./: .gitignore  README.md  main.py  pyproject.toml  test.html
.github/workflows/: python-tests.yml
src/cifra_spotify/api/: __init__.py  deps.py
src/cifra_spotify/api/router/: auth.py  cifra.py  me.py  playlist.py  track.py  webhooks.py
src/cifra_spotify/api/routers/: __init__.py  auth.py  cifra.py  track.py  webhook.py
src/cifra_spotify/app/core/: config.py  logger.py
src/cifra_spotify/app/custom_exceptions/: __init__.py  exc_handler.py  exceptions.py
src/cifra_spotify/app/schemas/: auth_schema.py  me_schema.py  search_schema.py  service_schema.py  token.py  track_schema.py  track_search_schema.py
src/cifra_spotify/app/schemas/cifraclub/: cifraclub_schema.py
src/cifra_spotify/cifras/: cifra.py  cifra_base.py  cifra_club.py  enum.py  util.py
src/cifra_spotify/cifras/cifra_club/: cifra_club.py  util.py
src/cifra_spotify/cifras/parsers/: cifraclub.py  spotify.py
src/cifra_spotify/cifras/render/: cifraclub.py
src/cifra_spotify/cifras/schemas/: response.py
src/cifra_spotify/cifras/search/: ddg.py  ranking.py
src/cifra_spotify/spotify/: __init__.py  auth.py  hooks.py  pooling.py  retry_config.py  spotify.py
src/cifra_spotify/spotify/clients/: __init__.py  spotify.py  spotify_api.py  spotify_auth.py  spotify_client.py  spotify_token_storage.py
src/cifra_spotify/spotify/polling/: spotify_polling.py
src/cifra_spotify/spotify/services/: spotify_service.py
src/cifra_spotify/types/: cifra.py
src/cifra_spotify/workers/: spotify_polling_runner.py
tests/: test_api_auth.py  test_auth.py  test_cifra.py  test_pooling.py  test_spotify.py  test_spotify_client.py
(+6 files in other folders)
