[project]
name = "cifra-spotify"
version = "0.1.0"
description = ""
authors = [
    {name = "rodrigoneal",email = "rodrigho2006@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "fastapi[standard] (>=0.121.2,<0.122.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
]

[tool.poetry]
packages = [{include = "cifra_spotify", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.5,<0.15.0)"
]
